--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <!-- Thanh điều hướng -->
-<nav class="navbar navbar-expand-lg" style="background-color: #dc3545;">
+<nav class="navbar navbar-expand-lg" style="background-color: #a3cfff;">
   <div class="container-fluid">
     <a class="navbar-brand fw-bold text-white">Trợ giúp</a>
 
